objects/Order.object
<CustomObject>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the order is contracted.</description>
        <inlineHelpText>Indicates if the order is contracted.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractingMethod__c</fullName>
        <description>&quot;By Subscription End Date&quot; creates a separate Contract for each unique Subscription End Date, containing only those Subscriptions. &quot;Single Contract&quot; creates one Contract containing all Subscriptions, regardless of their End Dates.</description>
        <inlineHelpText>&quot;By Subscription End Date&quot; creates a separate Contract for each unique Subscription End Date, containing only those Subscriptions. &quot;Single Contract&quot; creates one Contract containing all Subscriptions, regardless of their End Dates.</inlineHelpText>
        <label>Contracting Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ContractingMethod</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__OrderBookings__c</fullName>
        <description>Total amount of all order product bookings.</description>
        <inlineHelpText>Total amount of all order product bookings.</inlineHelpText>
        <label>Order Bookings</label>
        <summarizedField>OrderItem.SBQQ__OrderProductBookings__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__PaymentTerm__c</fullName>
        <description>The payment term for this order.</description>
        <inlineHelpText>The payment term for this order.</inlineHelpText>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__PaymentTerm</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PriceCalcStatusMessage__c</fullName>
        <description>The price calculation status message.</description>
        <inlineHelpText>The price calculation status message</inlineHelpText>
        <label>Price Calculation Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceCalcStatus__c</fullName>
        <description>The order price calculation  job status.  It is set by the system.</description>
        <inlineHelpText>Indicates the order price calculation job status.  It is set by the system.</inlineHelpText>
        <label>Price Calculation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__JobStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The quote where the order is created from.</description>
        <inlineHelpText>The quote where the order is created from.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalTerm__c</fullName>
        <description>Specify the term of the renewal. By default, it matches the original contract term.</description>
        <inlineHelpText>Specify the term of the renewal. By default, it matches the original contract term.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <inlineHelpText>Rate of renewal price increases.</inlineHelpText>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__TaxAmount__c</fullName>
        <description>The estimated tax amount</description>
        <inlineHelpText>The estimated tax amount</inlineHelpText>
        <label>Estimated Tax</label>
        <summarizedField>OrderItem.SBQQ__TaxAmount__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SBQQ__Cannot_Contract_New_Order</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(), SBQQ__Contracted__c)</errorConditionFormula>
        <errorDisplayField>SBQQ__Contracted__c</errorDisplayField>
        <errorMessage>Can&apos;t contract the order. Activate the order and try again.</errorMessage>
    </validationRules>
</CustomObject>